overlap bug

--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,6 @@ a:hover {
   margin: 10px auto;
 }
 .card {
-  position: relative;
   display: flex;
   flex-direction: column;
   border: 1px solid #d0d0d0;
@@ -199,16 +198,11 @@ a:hover {
   padding: 15px;
   width: 300px;
   height: 250px;
-  flex-shrink: 1;
   cursor: pointer;
   box-shadow: 
-    /* The second layer */
     0 7px 0 -5px rgb(255, 255, 255),
-    /* The second layer shadow */
     0 7px 1px -4px rgba(0, 0, 0, 0.15),
-     /* The third layer */
     0 15px 0 -10px rgb(255, 255, 255),
-    /* The third layer shadow */
     0 15px 1px -9px rgba(0, 0, 0, 0.15);
 }
 .card-bottom {
